# VTKExamples

./: .flake8  .gitattributes  .gitignore  .lfsconfig  CMakeLists.txt  CTestConfig.cmake  Cxx.md  Gemfile  Java.md  README.md  README.txt  ReadPolyData.java  VTKColorSeriesPatches.html  VTKNamedColorPatches.html  _config.yml  home.md  index.html  mkdocs.yml  mkdocsPy3.yml  module.cmake
Cxx/Medical/: CMakeLists.txt  GenerateCubesFromLabels.cxx  MedicalDemo2.cxx
Cxx/Plotting/: CMakeLists.txt  LinePlot.md  ParallelCoordinates.cxx
Cxx/Points/: CMakeLists.txt  ExtractSurface.md  ExtractSurfaceDemo.md  PointOccupancy.md  SignedDistance.md  UnsignedDistance.cxx
Cxx/Remote/: CMakeLists.txt
Cxx/VisualizationAlgorithms/: CMakeLists.txt  CutWithScalars.cxx  FindCellIntersections.md
Cxx/VolumeRendering/: CMakeLists.txt  MinIntensityRendering.cxx
Cxx/Widgets/: AngleWidget.md  BorderWidget.md  CMakeLists.txt  CaptionWidget.cxx  ContourWidget.md  ImagePlaneWidget.cxx  ImageTracerWidget.cxx  ImplicitPlaneWidget2.cxx  ImplicitPlaneWidget2.md  LineWidget2.cxx  RectilinearWipeWidget.cxx  RectilinearWipeWidget.md  SeedWidget.md  SphereWidgetEvents.md  SplineWidget.cxx  TexturedButtonWidget.cxx
src/: CMakeLists.txt  CSharp.md  CSharpVTKClassesUsed.md  CTestConfig.cmake  Cxx.md  CxxVTKClassesNotUsed.md  CxxVTKClassesUsed.md  Java.md  JavaScript.md  JavaVTKClassesNotUsed.md  JavaVTKClassesUsed.md  Python.md  PythonVTKClassesUsed.md  SyncSiteWithRepo.sh  SyncSiteWithRepoPy3.sh  SyncWikiWithRepo.sh  Tcl.md  VTKBook.md  VTKBookFigures.md  VTKFileFormats.md  index.md
src/Admin/: AddTestPrefix.py  CheckPagesForImages  ComponentsCache  FindExamplesMissingTestImages.py  FindMissingExamples.py  FindMissingTestImages.py  ReadMe.md  RenameFiles.py  ScrapeRepo  ScrapeRepoPy3.py  ScrapeWikiForDescriptions  TinyUrlCache  UploadBaselines  VTKCMakeLists  VTKClassesUsedInExamples.py  VTKQtCMakeLists  ValidateMarkdown.py  WhatModulesVTK.py  WhatModulesVTKPy3.py  getDeletedFile.sh  sitemap.xml  sitemapGenerator  sitemap_gen.py
src/Artifacts/: OldVersusNew.odp  ScrapeRepo.odp  ToolkitsByExample.odp  VTKExamplesStatus2017.odp
src/Boneyard/: Cylinder.cxx
src/Boneyard/KWWidgets/: SideBySideRenderWindows.cxx
src/CMake/: CTestCustom.ctest.in  PlatformSpecificChecks.cmake  RequiresModule.cmake  RequiresSettingOff.cmake  RequiresSettingOn.cmake  RequiresVersion.cmake  WikiPolicies.cmake  vtkTestingObjectFactory.cmake
src/Coverage/: CSharpVTKClassesNotUsed.md  CSharpVTKClassesUsed.md  CxxVTKClassesNotUsed.md  CxxVTKClassesUsed.md  JavaVTKClassesNotUsed.md  JavaVTKClassesUsed.md  PythonVTKClassesNotUsed.md  PythonVTKClassesUsed.md
src/Cxx/: .clang-format  Snippets.md  vtkglut.cxx  vtkglut.md
src/Developers/: AlgorithmSourceMultipleOutputPorts.cxx  AlgorithmSourceMultipleOutputPorts.md  CMakeLists.txt  DebugMacro.cxx  Errors.cxx  FailedFilter.cxx  GetSetVector3Macro.cxx  MultipleInputConnections.cxx  MultipleOutputPorts.cxx  PassInputTypeAlgorithm.cxx  SetClampMacro.cxx  SetClampMacro.md  vtkImageAlgorithmSource.cxx  vtkImageAlgorithmSource.h  vtkImageAlgorithmSourceExample.cxx  vtkTestA.cxx  vtkTestA.h  vtkTestB.cxx  vtkTestB.md  vtkTestClass1.cxx  vtkTestClass1.h  vtkTestClass1.md  vtkTestClass2.cxx  vtkTestClass2.h  vtkTestClass2.md  vtkTestClass3.cxx  vtkTestClass3.h  vtkTestClass3.md  vtkTestFailedFilter.h  vtkTestFailedFilter.md  vtkTestMultipleInputConnectionsFilter.cxx  vtkTestMultipleInputConnectionsFilter.h  vtkTestMultipleInputConnectionsFilter.md  vtkTestMultipleOutputPortsFilter.cxx  vtkTestMultipleOutputPortsFilter.h  vtkTestMultipleOutputPortsFilter.md  vtkTestMultipleOutputPortsSource.cxx  vtkTestMultipleOutputPortsSource.h  vtkTestPassInputTypeAlgorithmFilter.cxx  vtkTestPassInputTypeAlgorithmFilter.h  (+1 more)
src/ImplicitFunctions/: ImplicitDataSet.cxx
src/Instructions/: .#ForAdministrators.md  ConvertingFiguresToExamples.md  ForAdministrators.md  ForDevelopers.md  ForUsers.md  Guidelines.md  MyExample.cxx  MyExample.md
src/Java/: Arrow.java  Circle.java  Cylinder.md  Cylinder.py  Line.md  Snippets.md
src/Python/: Animation.md  Animation.py  BackgroundImage.py  ColorActor.py  ColoredTriangle.md  ColoredTriangle.py  CurvaturesDemo.md  Cylinder.md  DistanceBetweenPoints.py  FilledPolygon.py  FrustumSource.md  FrustumSource.py  ImageWeightedSum.md  ImageWeightedSum.py  ImplicitDataSet.py  InteractorStyleTrackballActor.md  InteractorStyleTrackballActor.py  InteractorStyleTrackballCamera.py  IterativeClosestPoints.py  MeshLabelImage.md  MeshLabelImageColor.md  MeshLabelImageColor.py  Outline.py  PLYWriter.py  ReadWriteVtkImageData.md  ReadWriteVtkImageData.py  RotationAroundLine.md  STLReader.py  STLWriter.py  Screenshot.py  Snippets.md  SolidColoredTriangle.py  SumVTKImages.py  TextSource.py  UnstructuredGridReader.md  UnstructuredGridReader.py  VTPReader.py  Variant.py  VectorText.py  WindowTitle.md  (+3 more)
src/Tcl/: Cylinder.md  Cylinder.tcl
src/VTKBook/: 00Preface.md  01Chapter1.md  02Chapter2.md  03Chapter3.md  04Chapter4.md  05Chapter5.md  06Chapter6.md  07Chapter7.md  08Chapter8.md  09Chapter9.md  10Chapter10.md  11Chapter11.md  12Chapter12.md  13Glossary.md  Chapter1.md  Chapter12.md  Chapter2.md  Chapter3.md  Chapter4.md  Chapter6.md  Chapter7.md  Introduction.md  Preface.md
src/VTKBookLaTeX/: Bibliography.bib  Chapter01.tex  Chapter03.tex  Chapter06.tex  Chapter07.tex  Chapter10.tex  Clean.bash  Definitions.tex  ImportFigures.py  Preface.tex  ReadMe.md  Title.tex  VTKTextBook.md  VTKTextBook.tex
src/VTKBookLaTex/: .gitignore  Bibliography.bib  Chapter01.tex  Chapter02.tex  Chapter03.tex  Chapter04.tex  Chapter05.tex  Chapter06.tex  Chapter07.tex  Chapter08.tex  Chapter09.tex  Chapter10.tex  Chapter11.tex  Chapter12.tex  Clean.bash  Clean.cmd  Definitions.tex  Glossary.tex  ImportFigures.py  MakeDocument.bash  MakeDocument.cmd  Preface.tex  ReadMe.md  Title.tex  VTKTextBook.ist  VTKTextBook.md  VTKTextBook.tex
src/Widgets/: SeedWidgetImage.cxx
src/mwclient/: REFERENCE.txt  RELEASE-NOTES.txt  __init__.py  compatibility.py  errors.py  listing.py  page.py  upload.py
(+8436 files in other folders)
